manifests/eks-demo/resources/keycloak/resources-1/patches/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
      - name: main
